fix/refactor: arrumar nome do arquivo css e overflow da home

--- a/src/components/themes/home.module.scss
+++ b/src/components/themes/home.module.scss
@@ -2,7 +2,7 @@
     background-color: white;
     min-height: 100vh;
     min-width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     .topicos{
         height: 80vh;
     }
